--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -12,10 +13,10 @@
   <title>Clean Blog - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
     type='text/css'>
   <link
@@ -23,7 +24,7 @@
     rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="https://cdn.bootcdn.net/ajax/libs/startbootstrap-clean-blog/5.0.8/css/clean-blog.css" rel="stylesheet">
 
 </head>
 
@@ -59,7 +60,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+  <header class="masthead" style="background-image: url('https://img.udnfunlife.com/image/product/DS004855/20181019101414547.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -137,7 +138,7 @@
 
         <!--圖片輪播-->
         <div class="container my-3">
-          <!--<div id="bannerCarousel" class="carousel slide  carousel-fade" data-ride="carousel">-->
+        <div id="bannerCarousel" class="carousel slide  carousel-fade" data-ride="carousel">
           <div id="bannerCarousel" class="carousel slide" data-ride="carousel">
             <!--連結導引-->
             <ol class="carousel-indicators">
@@ -146,36 +147,44 @@
               <li data-target="#bannerCarousel" data-slide-to="2"></li>
             </ol>
 
-            <!--幻燈片圖-->
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="w-100" src="images/banner01.jpg">
+           
+						<!--幻燈片圖-->
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="w-100" src="https://picsum.photos/500/400?random=6">
               </div>
-              <div class="carousel-item">
-                <img class="w-100" src="images/banner02.jpg">
+								<div class="carousel-item">
+									<img class="w-100" src="https://picsum.photos/500/400?random=2">
               </div>
-              <div class="carousel-item">
-                <img class="w-100" src="images/banner03.jpg">
+									<div class="carousel-item">
+										<img class="w-100" src="https://picsum.photos/500/400?random=3">
               </div>
-            </div>
+									</div>
 
-            <!--上下導引-->
-            <a class="carousel-control-prev" href="#bannerCarousel" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </a>
-            <a class="carousel-control-next" href="#bannerCarousel" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </a>
-          </div>
-        </div>
+									<!--上下導引-->
+									<a class="carousel-control-prev" href="#bannerCarousel" role="button"
+										data-slide="prev">
+										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									</a>
+									<a class="carousel-control-next" href="#bannerCarousel" role="button"
+										data-slide="next">
+										<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									</a>
+								</div>
+							</div>
+
 
 
         <!-- Bootstrap core JavaScript -->
-        <script src="vendor/jquery/jquery.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+       <script src="https://code.jquery.com/jquery-2.2.4.min.js"integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
         <!-- Custom scripts for this template -->
-        <script src="js/clean-blog.min.js"></script>
+       <script src= "https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-clean-blog/5.0.10/js/clean-blog.min.js"></script>
+
+
+
+
 
         <!-- Pager -->
         <div class="clearfix">
@@ -187,44 +196,42 @@
 
   <hr>
 
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
+<!-- Footer -->
+				<footer>
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-8 col-md-10 mx-auto">
+								<ul class="list-inline text-center">
+									<li class="list-inline-item">
+										<a href="#">
+											<span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
+										</a>
+									</li>
+									<li class="list-inline-item">
+										<a href="#">
+											<span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
                 </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
+										</a>
+									</li>
+									<li class="list-inline-item">
+										<a href="#">
+											<span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                 </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-
+										</a>
+									</li>
+								</ul>
+								<p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+							</div>
+						</div>
+					</div>
+				</footer>
 </body>
 
 </html>
