--- a/contact.html
+++ b/contact.html
@@ -11,25 +11,130 @@
   <title>Clean Blog - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
+  <link href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" type="text/css">
+ <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
     type='text/css'>
   <link
     href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
     rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-clean-blog/5.0.10/css/clean-blog.css" rel="stylesheet">
 
 </head>
 
 <body>
+ <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Home</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="post.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Awards</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  </body>
+
+
+    <!-- Page Header -->
+  <header class="masthead" style="background-image: url('https://i.pinimg.com/originals/1e/ab/44/1eab449538121101dd010e854787b11c.jpg')"> 
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="page-heading">
+            <h1>Certifications</h1>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+
+  <head>
+
+  <!-- Awards-->
+  <section class="resume-section" id="awards">
+    <div class="resume-section-content">
+      <h2 class="mb-5">Awards & Certifications</h2>
+      <ul class="fa-ul mb-0">
+        <li>
+          <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+          Cambridge English Test A2
+        </li>
+        <li>
+          <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+          TLLDF Certificatie of Award Gold Medal
+        </li>
+        <li>
+          <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+          Certificatie of Scholarship
+        </li>
+        <li>
+          <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+          1
+          <sup>st</sup>
+          Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+        </li>
+        <li>
+          <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+          2
+          <sup>nd</sup>
+          Place - University of Colorado Boulder - Emerging Tech Competition 2008
+        </li>
+        <li>
+          <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+          1
+          <sup>st</sup>
+          Place - James Buchanan High School - Hackathon 2006
+        </li>
+        <li>
+          <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+          3
+          <sup>rd</sup>
+          Place - James Buchanan High School - Hackathon 2005
+        </li>
+      </ul>
+  <div class="text-center">
+    <img src="https://picsum.photos/200/300?image=0" class="rounded" alt="...">
+  </div>
+
+
+
+    </div>
+  </section>
+  </div>
+
+
+  </body>
+
+</html>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+   <!--<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="index.html">Start Bootstrap</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -58,7 +163,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
+ <!-- <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -70,10 +175,10 @@
         </div>
       </div>
     </div>
-  </header>
+  </header>-->
 
   <!-- Main Content -->
-  <div class="container">
+  <!--<div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as
@@ -81,7 +186,7 @@
         <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
         <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
         <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-        <form name="sentMessage" id="contactForm" novalidate>
+        <!--<form name="sentMessage" id="contactForm" novalidate>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Name</label>
@@ -125,7 +230,7 @@
   <hr>
 
   <!-- Footer -->
-  <footer>
+  <!--<footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
@@ -162,8 +267,8 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
   <!-- Contact Form JavaScript -->
   <script src="js/jqBootstrapValidation.js"></script>
